--- a/quiz1/profile/profile.css
+++ b/quiz1/profile/profile.css
@@ -1,150 +1,185 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-html{
-	font-size: 12px;
-	font-family: "Roboto Cn", sans-serif;
+html {
+    font-size: 12px;
+    font-family: "Roboto Cn", sans-serif;
 }
 
-a{
-	text-decoration: none;
-	color: black;
+a {
+    text-decoration: none;
+    color: black;
     font-weight: 500;
 }
 
-header{
-	width: 100%;
-	height: 100vh;
+header {
+    width: 100%;
+    height: 100vh;
     background-image: url("../img/background/b-profile.JPG");
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
-	background-size: cover;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .2);
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-	position: relative;
+    position: relative;
     overflow: hidden;
 }
 
-.container{
-	max-width: 110rem;
-	width: 100%;
-	margin: 0 auto;
+.container {
+    max-width: 110rem;
+    width: 100%;
+    margin: 0 auto;
 }
+
+
+.menu-toggle {
+    position: fixed;
+    top: 2.5rem;
+    right: 2.5rem;
+    color: #eeeeee;
+    font-size: 3rem;
+    cursor: pointer;
+    z-index: 1000;
+    display: none;
+}
+
+
+.overlay {
+    background-color: rgba(0, 0, 0, .2);
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    transition: opacity 650ms;
+    transform: scale(0);
+    opacity: 0;
+    display: none;
+}
+
 
 .image {
     height: 50px;
     width: 50px;
 }
 
-nav{
-	padding-top: 5rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-transform: uppercase;
-	font-size: 1.6rem;
+nav {
+    padding-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 1.6rem;
 }
 
-a:hover{
+a:hover {
     color: crimson;
 }
 
-nav ul{
-	display: flex;
+nav ul {
+    display: flex;
 }
 
-nav ul li{
-	list-style: none;
-	transform: translateX(100rem);
-	animation: slideIn .5s forwards;
+nav ul li {
+    list-style: none;
+    transform: translateX(100rem);
+    animation: slideIn .5s forwards;
 }
 
-.deskripsi p{
-	list-style: none;
-	transform: translateX(100rem);
-	animation: slideIn 1s forwards;
+.deskripsi p {
+    list-style: none;
+    transform: translateX(100rem);
+    animation: slideIn 1s forwards;
 }
 
-nav ul li:nth-child(1){
-	animation-delay: 0s;
+nav ul li:nth-child(1) {
+    animation-delay: 0s;
 }
 
-nav ul li:nth-child(2){
-	animation-delay: .5s;
+nav ul li:nth-child(2) {
+    animation-delay: .5s;
 }
 
-nav ul li:nth-child(3){
-	animation-delay: 1s;
+nav ul li:nth-child(3) {
+    animation-delay: 1s;
 }
 
-nav ul li:nth-child(4){
-	animation-delay: 1.5s;
+nav ul li:nth-child(4) {
+    animation-delay: 1.5s;
 }
 
-nav ul li:nth-child(5){
-	animation-delay: 2s;
+nav ul li:nth-child(5) {
+    animation-delay: 2s;
 }
 
-nav ul li a{
-	padding: 1rem 0;
-	margin: 0 3rem;
-	position: relative;
-	letter-spacing: 2px;
+nav ul li a {
+    padding: 1rem 0;
+    margin: 0 3rem;
+    position: relative;
+    letter-spacing: 2px;
 }
 
-nav ul li a:last-child{
-	margin-right: 0;
+nav ul li a:last-child {
+    margin-right: 0;
 }
 
 nav ul li a::before,
-nav ul li a::after{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 3px;
-	background-color: black;
-	left: 0;
-	transform: scaleX(0);
-	transition: all .5s;
+nav ul li a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: black;
+    left: 0;
+    transform: scaleX(0);
+    transition: all .5s;
 }
 
-nav ul li a::before{
-	top: 0;
-	transform-origin: left;
+nav ul li a::before {
+    top: 0;
+    transform-origin: left;
 }
 
-nav ul li a::after{
-	bottom: 0;
-	transform-origin: right;
+nav ul li a::after {
+    bottom: 0;
+    transform-origin: right;
 }
 
 nav ul li a:hover::before,
-nav ul li a:hover::after{
-	transform: scaleX(1);
+nav ul li a:hover::after {
+    transform: scaleX(1);
 }
 
 @keyframes slideIn {
-	from{
+    from {}
 
-	}
-	to{
-		transform: translateX(0);
-	}
+    to {
+        transform: translateX(0);
+    }
 }
 
-section{
+section {
     padding-bottom: 50px;
 }
 
-p{
+p {
     font-size: 16px;
 }
 
-.lead{
+.lead {
     font-size: 20px;
     font-weight: 300;
+}
+
+#nama {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 #nama h1 {
@@ -218,7 +253,7 @@ section h2::after {
     border: 4px solid transparent;
     height: 95%;
     width: 100%;
-    
+
 }
 
 .resume-item:hover {
@@ -262,13 +297,68 @@ section h2::after {
     margin-bottom: 0;
 }
 
- 
+
 .scrollToTopBtn {
-	position: fixed;
-	bottom: 50px;
-	right: 50px;
-	z-index: 100;
-	display: none;
-	padding: 8px 4px;
-	cursor: pointer;
-  }
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 100;
+    display: none;
+    padding: 8px 4px;
+    cursor: pointer;
+}
+
+
+@media screen and (max-width:680px) {
+
+    .menu-toggle {
+        display: block;
+    }
+
+    nav {
+        padding-top: 0;
+        display: none;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 100vh;
+        text-align: center;
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin-top: 5rem;
+    }
+
+    nav ul li a {
+        margin: 0;
+        font-size: 2.5rem;
+    }
+
+    .overlay.menu-open,
+    nav.menu-open {
+        display: flex;
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    #nama h1 {
+        font-weight: 200;
+        margin-bottom: 20px;
+        display: block;
+        color: #fff;
+        font-size: 30px;
+    }
+
+    #nama h1 strong {
+        font-weight: 600;
+        opacity: 0.5;
+    }
+
+    #nama b {
+        opacity: 0.5;
+    }
+}
