--- a/quiz1/tourist/tourist.css
+++ b/quiz1/tourist/tourist.css
@@ -34,6 +34,32 @@ header{
 	padding-bottom: 40px;
 }
 
+
+.menu-toggle {
+	position: fixed;
+	top: 2.5rem;
+	right: 2.5rem;
+	color: #eeeeee;
+	font-size: 3rem;
+	cursor: pointer;
+	z-index: 1000;
+	display: none;
+}
+
+
+.overlay {
+	background-color: rgba(0,0,0,.2);
+	position: fixed;
+	right: 0;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	transition: opacity 650ms;
+	transform: scale(0);
+	opacity: 0;
+	display: none;
+}
+
 nav{
 	padding-top: 5rem;
 	display: flex;
@@ -177,3 +203,42 @@ p{
 	padding: 8px 4px;
 	cursor: pointer;
   }
+
+  
+@media screen and (max-width:680px) {
+
+	.menu-toggle {
+		display: block;
+	}
+
+	nav {
+		padding-top: 0;
+		display: none;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		height: 100vh;
+		text-align: center;
+	}
+
+	nav ul {
+		flex-direction: column;
+	}
+
+	nav ul li {
+		margin-top: 5rem;
+	}
+
+	nav ul li a {
+		margin: 0;
+		font-size: 2.5rem;
+	}
+
+	.overlay.menu-open,
+	nav.menu-open {
+		display: flex;
+		transform: scale(1);
+		opacity: 1;
+	}
+
+}
