--- a/quiz1/food/food.css
+++ b/quiz1/food/food.css
@@ -1,32 +1,32 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
-html{
+html {
 	font-size: 10px;
 	font-family: "Roboto Cn", sans-serif;
 }
 
-a{
+a {
 	text-decoration: none;
 	color: black;
-    font-weight: 500;
+	font-weight: 500;
 }
 
-header{
+header {
 	width: 100%;
 	height: 100vh;
-    background-image: url("../img//background/b-food.jpg");
+	background-image: url("../img//background/b-food.jpg");
 	background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+	background-repeat: no-repeat;
+	background-position: center;
 	position: relative;
-    overflow: hidden;
+	overflow: hidden;
 }
 
-.container{
+.container {
 	max-width: 120rem;
 	width: 100%;
 	margin: 0 auto;
@@ -47,7 +47,7 @@ header{
 
 
 .overlay {
-	background-color: rgba(0,0,0,.2);
+	background-color: rgba(0, 0, 0, .2);
 	position: fixed;
 	right: 0;
 	left: 0;
@@ -59,7 +59,7 @@ header{
 	display: none;
 }
 
-nav{
+nav {
 	padding-top: 5rem;
 	display: flex;
 	justify-content: center;
@@ -68,59 +68,59 @@ nav{
 	font-size: 1.6rem;
 }
 
-a:hover{
-    color: crimson;
+a:hover {
+	color: crimson;
 }
 
-nav ul{
+nav ul {
 	display: flex;
 }
 
-nav ul li{
+nav ul li {
 	list-style: none;
 	transform: translateX(100rem);
 	animation: slideIn .5s forwards;
 }
 
-.deskripsi p{
+.deskripsi p {
 	list-style: none;
 	transform: translateX(100rem);
 	animation: slideIn 1s forwards;
 }
 
-nav ul li:nth-child(1){
+nav ul li:nth-child(1) {
 	animation-delay: 0s;
 }
 
-nav ul li:nth-child(2){
+nav ul li:nth-child(2) {
 	animation-delay: .5s;
 }
 
-nav ul li:nth-child(3){
+nav ul li:nth-child(3) {
 	animation-delay: 1s;
 }
 
-nav ul li:nth-child(4){
+nav ul li:nth-child(4) {
 	animation-delay: 1.5s;
 }
 
-nav ul li:nth-child(5){
+nav ul li:nth-child(5) {
 	animation-delay: 2s;
 }
 
-nav ul li a{
+nav ul li a {
 	padding: 1rem 0;
 	margin: 0 3rem;
 	position: relative;
 	letter-spacing: 2px;
 }
 
-nav ul li a:last-child{
+nav ul li a:last-child {
 	margin-right: 0;
 }
 
 nav ul li a::before,
-nav ul li a::after{
+nav ul li a::after {
 	content: '';
 	position: absolute;
 	width: 100%;
@@ -131,81 +131,86 @@ nav ul li a::after{
 	transition: all .5s;
 }
 
-nav ul li a::before{
+nav ul li a::before {
 	top: 0;
 	transform-origin: left;
 }
 
-nav ul li a::after{
+nav ul li a::after {
 	bottom: 0;
 	transform-origin: right;
 }
 
 nav ul li a:hover::before,
-nav ul li a:hover::after{
+nav ul li a:hover::after {
 	transform: scaleX(1);
 }
 
 @keyframes slideIn {
-	from{
+	from {}
 
-	}
-	to{
+	to {
 		transform: translateX(0);
 	}
 }
 
 #text-3 span {
-    color: crimson;
-    font-weight: 500;
+	color: crimson;
+	font-weight: 500;
 	font-size: 35px;
 }
 
+button {
+	border-radius: 50%;
+	background-color: crimson;
+	font-weight: 800;
+}
+
 section h2 {
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 20px;
-    position: relative;
+	padding-bottom: 20px;
+	text-align: center;
+	margin: 20px;
+	position: relative;
 }
 
 section h2::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: -1px;
-    width: 120px;
-    height: 4px;
-    background-color: crimson;
-    left: calc(50% - 60px);
+	content: '';
+	display: block;
+	position: absolute;
+	bottom: -1px;
+	width: 120px;
+	height: 4px;
+	background-color: crimson;
+	left: calc(50% - 60px);
 }
 
-img{
+img {
 	height: 350px;
 	width: 200px;
 }
 
-p{
-    color: #222 ;
+p {
+	color: #222;
 	font-size: 16px;
 	text-align: justify;
 }
 
-.card-body{
-	background-color:  #FFF7AE;
-    color: #222 ;
+.card-body {
+	background-color: #FFF7AE;
+	color: #222;
 	height: 17vh;
 }
 
-#section-food{
+#section-food {
 	background-color: #fff;
-    color: #000;
+	color: #000;
 }
 
-#section-food-vidio{
+#section-food-vidio {
 	background: #222;
-    color: #fff;
+	color: #fff;
 }
- 
+
 .scrollToTopBtn {
 	position: fixed;
 	bottom: 50px;
@@ -214,9 +219,9 @@ p{
 	display: none;
 	padding: 8px 4px;
 	cursor: pointer;
-  }
+}
 
-  
+
 @media screen and (max-width:680px) {
 
 	.menu-toggle {
@@ -253,7 +258,7 @@ p{
 		opacity: 1;
 	}
 
-	iframe{
+	iframe {
 		width: 100%;
 		height: 100%;
 	}
