--- a/quiz1/hometown/hometown.css
+++ b/quiz1/hometown/hometown.css
@@ -1,33 +1,33 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
-html{
+html {
 	font-size: 10px;
 	font-family: "Roboto Cn", sans-serif;
 }
 
-a{
+a {
 	text-decoration: none;
 	color: black;
-    font-weight: 500;
+	font-weight: 500;
 }
 
-header{
+header {
 	width: 100%;
 	height: 100vh;
-    background-image: url("../img/background/b-hometown.png");
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+	background-image: url("../img/background/b-hometown.png");
+	box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .2);
 	background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+	background-repeat: no-repeat;
+	background-position: center;
 	position: relative;
-    overflow: hidden;
+	overflow: hidden;
 }
 
-.container{
+.container {
 	max-width: 140rem;
 	width: 100%;
 	margin: 0 auto;
@@ -48,7 +48,7 @@ header{
 
 
 .overlay {
-	background-color: rgba(0,0,0,.2);
+	background-color: rgba(0, 0, 0, .2);
 	position: fixed;
 	right: 0;
 	left: 0;
@@ -60,7 +60,7 @@ header{
 	display: none;
 }
 
-nav{
+nav {
 	padding-top: 5rem;
 	display: flex;
 	justify-content: center;
@@ -69,59 +69,59 @@ nav{
 	font-size: 1.6rem;
 }
 
-a:hover{
-    color: crimson;
+a:hover {
+	color: crimson;
 }
 
-nav ul{
+nav ul {
 	display: flex;
 }
 
-nav ul li{
+nav ul li {
 	list-style: none;
 	transform: translateX(100rem);
 	animation: slideIn .5s forwards;
 }
 
-.deskripsi p{
+.deskripsi p {
 	list-style: none;
 	transform: translateX(100rem);
 	animation: slideIn 1s forwards;
 }
 
-nav ul li:nth-child(1){
+nav ul li:nth-child(1) {
 	animation-delay: 0s;
 }
 
-nav ul li:nth-child(2){
+nav ul li:nth-child(2) {
 	animation-delay: .5s;
 }
 
-nav ul li:nth-child(3){
+nav ul li:nth-child(3) {
 	animation-delay: 1s;
 }
 
-nav ul li:nth-child(4){
+nav ul li:nth-child(4) {
 	animation-delay: 1.5s;
 }
 
-nav ul li:nth-child(5){
+nav ul li:nth-child(5) {
 	animation-delay: 2s;
 }
 
-nav ul li a{
+nav ul li a {
 	padding: 1rem 0;
 	margin: 0 3rem;
 	position: relative;
 	letter-spacing: 2px;
 }
 
-nav ul li a:last-child{
+nav ul li a:last-child {
 	margin-right: 0;
 }
 
 nav ul li a::before,
-nav ul li a::after{
+nav ul li a::after {
 	content: '';
 	position: absolute;
 	width: 100%;
@@ -132,86 +132,90 @@ nav ul li a::after{
 	transition: all .5s;
 }
 
-nav ul li a::before{
+nav ul li a::before {
 	top: 0;
 	transform-origin: left;
 }
 
-nav ul li a::after{
+nav ul li a::after {
 	bottom: 0;
 	transform-origin: right;
 }
 
 nav ul li a:hover::before,
-nav ul li a:hover::after{
+nav ul li a:hover::after {
 	transform: scaleX(1);
 }
 
 @keyframes slideIn {
-	from{
+	from {}
 
-	}
-	to{
+	to {
 		transform: translateX(0);
 	}
 }
 
+button {
+	border-radius: 50%;
+	background-color: crimson;
+	font-weight: 800;
+}
 
 section h2 {
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 20px;
-    position: relative;
+	padding-bottom: 20px;
+	text-align: center;
+	margin: 20px;
+	position: relative;
 }
 
 section h2::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: -1px;
-    width: 120px;
-    height: 4px;
-    background-color: crimson;
-    left: calc(50% - 60px);
+	content: '';
+	display: block;
+	position: absolute;
+	bottom: -1px;
+	width: 120px;
+	height: 4px;
+	background-color: crimson;
+	left: calc(50% - 60px);
 }
 
-.lead{
-    font-size: 20px;
-    font-weight: 300;
+.lead {
+	font-size: 20px;
+	font-weight: 300;
 }
 
 #text-3 span {
-    color: crimson;
-    font-weight: 500;
+	color: crimson;
+	font-weight: 500;
 	font-size: 35px;
 }
 
-#section-hometown{
-    background-color: #FFF7AE;
-    color: #000;
+#section-hometown {
+	background-color: #FFF7AE;
+	color: #000;
 }
 
-#section-gresik-pudak{
-    background-color: #fff;
-    color: #000;
+#section-gresik-pudak {
+	background-color: #fff;
+	color: #000;
 }
 
-#section-gresik-bandeng{
-    background-color: #fff;
-    color: #000;
+#section-gresik-bandeng {
+	background-color: #fff;
+	color: #000;
 }
 
-#section-gresik-wali{
-    background-color: #222;
-    color: #fff;
+#section-gresik-wali {
+	background-color: #222;
+	color: #fff;
 }
 
-#section-gresik-industri{
-    background-color: #222;
-    color: #fff;
+#section-gresik-industri {
+	background-color: #222;
+	color: #fff;
 }
-  
-  .scrollToTopBtn {
+
+.scrollToTopBtn {
 	position: fixed;
 	bottom: 50px;
 	right: 50px;
@@ -219,9 +223,9 @@ section h2::after {
 	display: none;
 	padding: 8px 4px;
 	cursor: pointer;
-  }
+}
 
-  
+
 @media screen and (max-width:680px) {
 
 	.menu-toggle {
@@ -257,16 +261,20 @@ section h2::after {
 		transform: scale(1);
 		opacity: 1;
 	}
-	#section-gresik-industri .industri :nth-child(1){
+
+	#section-gresik-industri .industri :nth-child(1) {
 		order: 1;
 	}
-	#section-gresik-industri .industri :nth-child(2){
+
+	#section-gresik-industri .industri :nth-child(2) {
 		order: 0;
 	}
-	#section-gresik-wali .wali :nth-child(1){
+
+	#section-gresik-wali .wali :nth-child(1) {
 		order: 1;
 	}
-	#section-gresik-wali .wali :nth-child(2){
+
+	#section-gresik-wali .wali :nth-child(2) {
 		order: 0;
 	}
 }
