--- a/quiz1/profile/profile.css
+++ b/quiz1/profile/profile.css
@@ -33,7 +33,6 @@ header {
     margin: 0 auto;
 }
 
-
 .menu-toggle {
     position: fixed;
     top: 2.5rem;
@@ -44,7 +43,6 @@ header {
     z-index: 1000;
     display: none;
 }
-
 
 .overlay {
     background-color: rgba(0, 0, 0, .2);
@@ -58,7 +56,6 @@ header {
     opacity: 0;
     display: none;
 }
-
 
 .image {
     height: 50px;
@@ -158,6 +155,12 @@ nav ul li a:hover::after {
     to {
         transform: translateX(0);
     }
+}
+
+button {
+    border-radius: 50%;
+    background-color: crimson;
+    font-weight: 800;
 }
 
 section {
