--- a/quiz1/profile/profile.css
+++ b/quiz1/profile/profile.css
@@ -57,10 +57,7 @@ header {
     display: none;
 }
 
-.image {
-    height: 50px;
-    width: 50px;
-}
+
 
 nav {
     padding-top: 5rem;
@@ -157,15 +154,8 @@ nav ul li a:hover::after {
     }
 }
 
-button {
-    border-radius: 50%;
-    background-color: crimson;
-    font-weight: 800;
-}
 
-section {
-    padding-bottom: 50px;
-}
+
 
 p {
     font-size: 16px;
@@ -175,7 +165,6 @@ p {
     font-size: 20px;
     font-weight: 300;
 }
-
 #nama {
     height: 80vh;
     display: flex;
@@ -184,7 +173,6 @@ p {
     justify-content: center;
     flex-direction: column;
 }
-
 #nama h1 {
     font-weight: 200;
     margin-bottom: 20px;
@@ -192,33 +180,35 @@ p {
     color: #fff;
     font-size: 50px;
 }
-
 #nama h1 strong {
     font-weight: 600;
     opacity: 0.5;
 }
-
 #nama b {
     opacity: 0.5;
-}
-
-#section-about {
-    background-color: #fff;
-    color: #000;
 }
 
 #section-experience {
     background-color: #fff;
     color: #000;
 }
-
+#section-skills {
+    background: #222;
+    color: #fff;
+}
+#section-about {
+    background-color: #fff;
+    color: #000;
+}
+section {
+    padding-bottom: 50px;
+}
 section h2 {
     padding-bottom: 20px;
     text-align: center;
     margin: 20px;
     position: relative;
 }
-
 section h2::after {
     content: '';
     display: block;
@@ -230,23 +220,23 @@ section h2::after {
     left: calc(50% - 60px);
 }
 
-#section-skills {
-    background: #222;
-    color: #fff;
+.image {
+    height: 50px;
+    width: 50px;
 }
-
-
 .servis {
     padding: 2em;
     background: rgb(49, 49, 49);
     width: 100%;
     height: 100%;
 }
-
 .servis:hover {
     transition: all 0.3s ease;
     background: #222;
     transform: scale(1.05);
+}
+.servis h3 {
+    color: crimson;
 }
 
 .resume-item {
@@ -256,20 +246,16 @@ section h2::after {
     border: 4px solid transparent;
     height: 95%;
     width: 100%;
-
 }
-
 .resume-item:hover {
     transition: all 0.3s ease;
     background: #F5F5F5;
     transform: scale(1.05);
 }
-
 .resume-item p {
     text-align: justify;
     font-size: 17px;
 }
-
 .resume-item .date {
     display: block;
     margin-bottom: 10px;
@@ -277,7 +263,6 @@ section h2::after {
     font-weight: 700;
     color: black;
 }
-
 .resume-item .school {
     display: block;
     font-size: 16px;
@@ -287,20 +272,19 @@ section h2::after {
     color: crimson;
     font-size: 20px;
 }
-
-.servis h3 {
-    color: crimson;
-}
-
 .resume-item .school {
     color: black;
 }
-
 .resume-item *:last-child {
     margin-bottom: 0;
 }
 
 
+button {
+    border-radius: 50%;
+    background-color: crimson;
+    font-weight: 800;
+}
 .scrollToTopBtn {
     position: fixed;
     bottom: 50px;
@@ -313,11 +297,8 @@ section h2::after {
 
 
 @media screen and (max-width:680px) {
-
     .menu-toggle {
-        display: block;
-    }
-
+        display: block;}
     nav {
         padding-top: 0;
         display: none;
@@ -325,42 +306,31 @@ section h2::after {
         justify-content: space-evenly;
         align-items: center;
         height: 100vh;
-        text-align: center;
-    }
-
+        text-align: center;}
     nav ul {
         flex-direction: column;
     }
-
     nav ul li {
         margin-top: 5rem;
     }
-
     nav ul li a {
         margin: 0;
-        font-size: 2.5rem;
-    }
-
+        font-size: 2.5rem;}
     .overlay.menu-open,
     nav.menu-open {
         display: flex;
         transform: scale(1);
-        opacity: 1;
-    }
-
+        opacity: 1;}
     #nama h1 {
         font-weight: 200;
         margin-bottom: 20px;
         display: block;
         color: #fff;
-        font-size: 30px;
-    }
-
+        font-size: 30px;}
     #nama h1 strong {
         font-weight: 600;
         opacity: 0.5;
     }
-
     #nama b {
         opacity: 0.5;
     }
