--- a/quiz1/style.css
+++ b/quiz1/style.css
@@ -1,38 +1,41 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
-html{
+html {
 	font-size: 10px;
 	font-family: "Roboto Cn", sans-serif;
 }
 
-a{
+a {
 	text-decoration: none;
 	color: black;
-    font-weight: 500;
+	font-weight: 500;
 }
 
-header{
+p {
+	color: black;
+}
+
+header {
 	width: 100%;
 	height: 100vh;
-    background-image: url("img/background/b-homepage.jpg");
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+	background-image: url("img/background/b-homepage.jpg");
+	box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .2);
 	background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+	background-repeat: no-repeat;
+	background-position: center;
 	position: relative;
-    overflow: hidden;
+	overflow: hidden;
 }
 
-.container{
+.container {
 	max-width: 120rem;
 	width: 100%;
 	margin: 0 auto;
 }
-
 
 .menu-toggle {
 	position: fixed;
@@ -45,9 +48,8 @@ header{
 	display: none;
 }
 
-
 .overlay {
-	background-color: rgba(0,0,0,.2);
+	background-color: rgba(0, 0, 0, .2);
 	position: fixed;
 	right: 0;
 	left: 0;
@@ -59,7 +61,7 @@ header{
 	display: none;
 }
 
-nav{
+nav {
 	padding-top: 5rem;
 	display: flex;
 	justify-content: center;
@@ -69,18 +71,84 @@ nav{
 	position: relative;
 }
 
-a:hover{
-    color: crimson;
+a:hover {
+	color: crimson;
 }
 
-nav ul{
+nav ul {
 	display: flex;
 }
 
-nav ul li{
+nav ul li {
 	list-style: none;
 	transform: translateX(100rem);
 	animation: slideIn .5s forwards;
+}
+
+nav ul li:nth-child(1) {
+	animation-delay: 0s;
+}
+
+nav ul li:nth-child(2) {
+	animation-delay: .5s;
+}
+
+nav ul li:nth-child(3) {
+	animation-delay: 1s;
+}
+
+nav ul li:nth-child(4) {
+	animation-delay: 1.5s;
+}
+
+nav ul li:nth-child(5) {
+	animation-delay: 2s;
+}
+
+nav ul li a {
+	padding: 1rem 0;
+	margin: 0 3rem;
+	position: relative;
+	letter-spacing: 2px;
+}
+
+nav ul li a:last-child {
+	margin-right: 0;
+}
+
+nav ul li a::before,
+nav ul li a::after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	background-color: black;
+	left: 0;
+	transform: scaleX(0);
+	transition: all .5s;
+}
+
+nav ul li a::before {
+	top: 0;
+	transform-origin: left;
+}
+
+nav ul li a::after {
+	bottom: 0;
+	transform-origin: right;
+}
+
+nav ul li a:hover::before,
+nav ul li a:hover::after {
+	transform: scaleX(1);
+}
+
+@keyframes slideIn {
+	from {}
+
+	to {
+		transform: translateX(0);
+	}
 }
 
 .deskripsi {
@@ -92,106 +160,33 @@ nav ul li{
 	flex-direction: column;
 }
 
-.deskripsi p{
+.deskripsi p {
 	list-style: none;
 	transform: translateX(100rem);
 	animation: slideIn 1s forwards;
 }
 
-nav ul li:nth-child(1){
-	animation-delay: 0s;
-}
-
-nav ul li:nth-child(2){
-	animation-delay: .5s;
-}
-
-nav ul li:nth-child(3){
-	animation-delay: 1s;
-}
-
-nav ul li:nth-child(4){
-	animation-delay: 1.5s;
-}
-
-nav ul li:nth-child(5){
-	animation-delay: 2s;
-}
-
-nav ul li a{
-	padding: 1rem 0;
-	margin: 0 3rem;
-	position: relative;
-	letter-spacing: 2px;
-}
-
-nav ul li a:last-child{
-	margin-right: 0;
-}
-
-nav ul li a::before,
-nav ul li a::after{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 3px;
-	background-color: black;
-	left: 0;
-	transform: scaleX(0);
-	transition: all .5s;
-}
-
-nav ul li a::before{
-	top: 0;
-	transform-origin: left;
-}
-
-nav ul li a::after{
-	bottom: 0;
-	transform-origin: right;
-}
-
-nav ul li a:hover::before,
-nav ul li a:hover::after{
-	transform: scaleX(1);
-}
-
-@keyframes slideIn {
-	from{
-
-	}
-	to{
-		transform: translateX(0);
-	}
-}
-
-#text-1{
-    font-size: 35px;
+#text-1 {
+	font-size: 35px;
 }
 
 #text-2 {
-    font-size:35px ;
-    font-weight: 600;
+	font-size: 35px;
+	font-weight: 600;
 }
 
 
 #text-3 span {
-    color: crimson;
-    font-weight: 500;
+	color: crimson;
+	font-weight: 500;
 	font-size: 30px;
 }
 
-#text-4{
-    font-size: 18px;
+#text-4 {
+	font-size: 18px;
 	text-align: justify;
 	width: 40vw;
 }
-
-
-p{
-    color: black;
-}
-
 
 .frame {
 	height: 80vh;
@@ -235,8 +230,6 @@ p{
 		transform: scale(1);
 		opacity: 1;
 	}
-
-
 	.deskripsi {
 		height: 50vh;
 		width: 100vw;
@@ -245,34 +238,28 @@ p{
 		justify-content: center;
 		flex-direction: column;
 	}
-
 	.frame {
 		height: 30vh;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 	}
-
 	iframe {
 		width: 380px;
 		height: 230px;
 	}
-
 	#text-1 {
 		font-size: 24px;
 	}
-
 	#text-2 {
 		font-size: 24px;
 		font-weight: 600;
 	}
-
 	#text-3 span {
 		color: crimson;
 		font-weight: 500;
 		font-size: 20px;
 	}
-
 	#text-4 {
 		width: 100vw;
 	}
