--- a/CV/css/style.css
+++ b/CV/css/style.css
@@ -14,6 +14,11 @@ body {
     width: 50px;
 }
 
+#wp{
+    height: 50px;
+    width: 70px;
+}
+
 .site-section .title::before {
     content: "";
     position: absolute;
