--- a/Tribun/style.css
+++ b/Tribun/style.css
@@ -179,7 +179,7 @@ body{
     padding: 15px 25px;
     box-sizing: border-box;
     cursor: pointer;
-    background-image: url("/img/pohon.jpg");
+    background-image: url("/Tribun/img/pohon.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -214,7 +214,7 @@ p{
     padding: 15px 25px;
     box-sizing: border-box;
     cursor: pointer;
-    background-image: url("/img/pasar.jpg");
+    background-image: url("/Tribun/img/pasar.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -227,7 +227,7 @@ p{
     padding: 15px 25px;
     box-sizing: border-box;
     cursor: pointer;
-    background-image: url("/img/wisata.jpg");
+    background-image: url("/Tribun/img/wisata.jpg");
     background-position: center;
     background-size: cover;
 }
